--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@ body{
     margin: 0%;
     overflow-x: hidden;
 }
+strong{
+    font-weight: bold;
+}
+em{
+    font-style: italic;
+}
 .header-bg{
     margin: 0%;
     position: relative;
@@ -45,6 +51,7 @@ body{
 }
 .header-name{
     font-size: 5vw;
+    font-family: "Oswald", sans-serif;
     color: cornsilk;
     position: absolute;
     right: 5%;
@@ -52,6 +59,7 @@ body{
 }
 .header-desc{
     font-size: 2vw;
+    font-family: 'Oswald', sans-serif;
     font-style: italic;
     color: honeydew;
     position: absolute;
@@ -60,19 +68,18 @@ body{
 }
 .thm-badge{
     position: absolute;
-    width: 21vw;
     right: 5%;
     top: 55%;
 }
 .linkedin{
     position: absolute;
-    right: 28%;
+    right: 27%;
     top: 55%;
     width: 5vw;
 }
 .instagram{
     position: absolute;
-    right: 35%;
+    right: 34%;
     top: 54%;
     width: 6vw;
 }
@@ -84,24 +91,67 @@ body{
     width: 100vw;
     height: 100vh;
 }
-.about{
+.about-outerbox{
     position: absolute;
     border-radius: 2%;
-    top: 10vh;
-    left: 7vw;
+    top: 15vh;
+    left: 5vw;
     background-color: lightslategrey;
-    width: 30vw;
+    width: 33vw;
     height: 80vh;
-    box-shadow: 0.3vw 0.3vw 0.3vw black;
+    box-shadow: 0 0 0 0.3vw black;
+}
+.about-innerbox{
+    position: relative;
+    height: 80vh;
+    border-radius: 2%;
+    bottom: 1.5vh;
+    left: 1vw;
+    background-color: burlywood;
+    width: 33vw;
+    box-shadow: 0 0 0 0.3vw ;
+}
+.about-innerbox h1{
+    padding: 2vw 2vw 0.5vw 2vw;
+    text-align: left;
+    word-spacing: 0.5vw;
+    font-size: 1.5vw;
+    font-family: 'Lora', sans-serif;
+}
+.about-innerbox p{
+    padding: 0.5vw 2vw 0.5vw 2vw;
+    text-align: justify;
+    font-weight: 100;
+    font-size: 1vw;
+    font-family: 'Lora', sans-serif;
 }
 .slide-title{
     position: absolute;
+    padding: 0.4vw;
+    background-color: whitesmoke;
+    border-radius: 1%;
+    box-shadow: 0 0 0 0.3vw;
     font-weight: 500;
-    color: palegoldenrod;
+    font-family: 'Ubuntu', sans-serif;
+    color: black;
     font-size: 2vw;
     margin: 0%;
     top: 2vh;
-    right: 16vw;
+    right: 10vw;
+}
+.about-title{
+    position: absolute;
+    padding: 0.4vw;
+    background-color: whitesmoke;
+    border-radius: 1%;
+    box-shadow: 0 0 0 0.3vw;
+    font-weight: 500;
+    font-family: 'Ubuntu', sans-serif;
+    color: black;
+    font-size: 2vw;
+    margin: 0%;
+    top: 2vh;
+    left: 17vw;
 }
 .certi-show{
     background-color: white;
@@ -109,21 +159,21 @@ body{
     width: 40vw;
     position: absolute;
     top: 20vh;
-    right: 12vw;
+    right: 9vw;
 }
 .slidesimg{
     position: relative;
     display: none;
-    animation: animateleft 1s;
+    animation: animateright 1s;
     width: 100%;
 }
-@keyframes animateleft{
+@keyframes animateright{
 0%{
-    left: -1vw;
+    right: -1vw;
     opacity: 0;
 }
 100%{
-    left: 0;
+    right: 0;
     opacity: 1;
 }
 }
